don't offer session deleting since we are truly stateless
