# internal/routers.go
@@ -142,13 +142,6 @@ var routes = Routes{
 	},
 
 	{
-		"DeleteSession",
-		strings.ToUpper("Delete"),
-		"/session",
-		controller.DeleteSessionV1,
-	},
-
-	{
 		"UnbanUserV1",
 		strings.ToUpper("Delete"),
 		"/ban/{username}",
